i18n: add placeholder to KSaneOption::unitString() strings

The resulting string is set as suffix for KPluralHandlingSpinBox.
KPluralHandlingSpinBox updates its text on value change replacing the
value as placeholder/argument in the suffix string; if the
KLocalizedString suffix does not have a placeholder, there will be a
command line warning about the extra placeholder.

BUG: 370940
FIXED-IN: 20.07.80